# epass

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: main.yml  release.yml  rust.yml
src/: action.rs  aes.rs  config.rs  main.rs  pass.rs  password.rs
