[package]
name = "epass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.0"
dirs = "5.0.1"
crossterm = "0.26.1"
colored = "2.0.0"
rpassword = "7.2.0"
hex = "0.4.3"
sha256 = "1.1.4"
ring = "0.16.20"
sha2 = "0.10.7"